--- a/navigation/Base.lproj/Main.storyboard
+++ b/navigation/Base.lproj/Main.storyboard
@@ -1,24 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MuP-Jf-sIt">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--登陆-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="navigation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9tp-6D-L0x">
+                                <rect key="frame" x="125" y="230" width="117" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="JeE-AM-Rbl" kind="popoverPresentation" popoverAnchorView="9tp-6D-L0x" id="jT9-Yb-vih">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="登陆" id="hiW-7r-DIC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="132.68365817091455"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BGJ-7b-Jnq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ATU-Vj-gmM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6f0-hl-mgh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qpq-hh-iik"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3RW-lh-pUg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="174" y="133"/>
+        </scene>
+        <!--注册-->
+        <scene sceneID="9Ah-rf-M6K">
+            <objects>
+                <viewController id="c6Q-Bk-Q0F" customClass="MyViewcon" customModule="navigation" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7Js-pQ-Ka1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="BIE-re-vxj"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="注册" id="w5v-fH-IcZ">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="91J-Ub-hZa">
+                            <connections>
+                                <action selector="ada:" destination="c6Q-Bk-Q0F" id="D8t-Jk-VkC"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="MU4-vz-gXX"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eI5-iQ-0dj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2031.2" y="827.13643178410803"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nRh-vY-yPM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JeE-AM-Rbl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xb7-Qc-zr0">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="c6Q-Bk-Q0F" kind="relationship" relationship="rootViewController" id="qaw-wJ-ETu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kct-pV-gIN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1092" y="827.13643178410803"/>
+        </scene>
+        <!--Scroll View-->
+        <scene sceneID="XdQ-hD-1q8">
+            <objects>
+                <viewController id="pku-f4-cOF" customClass="scrollView" customModule="navigation" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NMf-TZ-RXW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-m1-62m">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="GnX-bo-J5h">
+                                <rect key="frame" x="37" y="618" width="300" height="37"/>
+                                <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="changePage:" destination="pku-f4-cOF" eventType="valueChanged" id="Qb9-UO-HB0"/>
+                                </connections>
+                            </pageControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="GnX-bo-J5h" firstAttribute="leading" secondItem="AKR-QB-V71" secondAttribute="leading" constant="37" id="Emt-Lo-05O"/>
+                            <constraint firstItem="fhD-m1-62m" firstAttribute="top" secondItem="NMf-TZ-RXW" secondAttribute="top" id="Kj2-PH-qdf"/>
+                            <constraint firstItem="GnX-bo-J5h" firstAttribute="centerX" secondItem="fhD-m1-62m" secondAttribute="centerX" id="Wt1-Az-bmw"/>
+                            <constraint firstItem="fhD-m1-62m" firstAttribute="leading" secondItem="NMf-TZ-RXW" secondAttribute="leading" id="dsi-68-wPv"/>
+                            <constraint firstItem="GnX-bo-J5h" firstAttribute="top" secondItem="AKR-QB-V71" secondAttribute="top" constant="598" id="maB-4s-SqD"/>
+                            <constraint firstItem="fhD-m1-62m" firstAttribute="bottom" secondItem="AKR-QB-V71" secondAttribute="bottom" id="r7i-gb-kx7"/>
+                            <constraint firstAttribute="trailing" secondItem="fhD-m1-62m" secondAttribute="trailing" id="tTa-bT-6Lc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="AKR-QB-V71"/>
+                    </view>
+                    <connections>
+                        <outlet property="Pagec" destination="GnX-bo-J5h" id="PaO-aD-UAI"/>
+                        <outlet property="ScrollView" destination="fhD-m1-62m" id="95T-bQ-xaQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n39-Zz-jwC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="709.60000000000002" y="1564.7676161919042"/>
+        </scene>
+        <!--Page-->
+        <scene sceneID="dlB-DC-5nC">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" doubleSided="YES" id="MuP-Jf-sIt" customClass="page" customModule="navigation" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="93N-0a-2wU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="426" y="2330"/>
         </scene>
     </scenes>
 </document>
